--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-google-chart": "^0.1.2",
+    "react-google-charts": "^3.0.15",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sidebar": "^3.0.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "sass": "^1.43.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
